@@ -15,7 +15,7 @@ info_TEXINFOS = gcompris.texi
 
 install-data-local:
 	$(mkinstalldirs) $(DESTDIR)$(gcompris_helpdir)
-	$(INSTALL_DATA)  $(srcdir)/gcompris.html $(DESTDIR)$(gcompris_helpdir)
+	$(INSTALL_DATA)  gcompris.html $(DESTDIR)$(gcompris_helpdir)
 	$(INSTALL_DATA)  $(srcdir)/overview.jpg $(DESTDIR)$(gcompris_helpdir)
 	$(INSTALL_DATA)  $(srcdir)/topic.dat $(DESTDIR)$(gcompris_helpdir)
 
