@@ -3,6 +3,7 @@
 .deps
 .exrc
 .libs
+*.pc
 Makefile
 Makefile.in
 gcompris
